# QtApng

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindZLib.cmake  Qt5Plugin.cmake
examples/: CMakeLists.txt
examples/apng/sample/: CMakeLists.txt
src/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/imageformats/apng/: CMakeLists.txt  apngimagehandler.cpp  apngimagehandler_p.h  apngimageplugin.cpp  apngreader.cpp  apngreader_p.h
tests/auto/apng/: CMakeLists.txt
tests/auto/apng/apngPlugin/: CMakeLists.txt  tst_apngplugin.cpp
